--- a/OdooNmit_Hackathon-main/package.json
+++ b/OdooNmit_Hackathon-main/package.json
@@ -13,7 +13,7 @@
     "data:destroy": "node backend/seeder -d",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
-  "author": "Upendra Dhamala",
+  "author": "Bibek Bhandari",
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.6.0",
